base/grafana/deployment.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: grafana
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: grafana
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: grafana
      annotations:
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true"
        prometheus.io/scheme: "https"
    spec:
      securityContext:
        fsGroup: 65534
        runAsGroup: 65534
        runAsNonRoot: true
        runAsUser: 65534
      serviceAccountName: grafana
      terminationGracePeriodSeconds: 10
      containers:
        - name: grafana
          image: grafana/grafana:latest
          ports:
            - name: https
              containerPort: 8080
          livenessProbe:
            httpGet:
              scheme: HTTPS
              port: 8080
              path: /api/health
          readinessProbe:
            httpGet:
              scheme: HTTPS
              port: 8080
              path: /api/health
          volumeMounts:
            - name: config
              mountPath: /etc/grafana/grafana.ini
              subPath: grafana.ini
            - name: provisioning-datasources
              mountPath: /etc/grafana/provisioning/datasources
            - name: provisioning-dashboards
              mountPath: /etc/grafana/provisioning/dashboards
            - name: dashboards
              mountPath: /etc/grafana/dashboards
            - name: certs
              mountPath: /var/secret/tls
      volumes:
        - name: config
          configMap:
            name: grafana
        - name: provisioning-datasources
          configMap:
            name: grafana-provisioning-datasources
        - name: provisioning-dashboards
          configMap:
            name: grafana-provisioning-dashboards
        - name: dashboards
          configMap:
            name: grafana-dashboards
        - name: certs
          secret:
            secretName: grafana-cert
