base/grafana/statefulset.k8s.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: grafana
spec:
  revisionHistoryLimit: 1
  serviceName: grafana
  template:
    spec:
      enableServiceLinks: false
      serviceAccountName: grafana
      securityContext:
        fsGroup: 472
        supplementalGroups:
          - 0
      containers:
        - name: grafana
          image: grafana/grafana:latest
          args:
            - -config=/config/grafana.ini
          ports:
            - name: http-grafana
              containerPort: 3000
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /robots.txt
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 3000
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /var/lib/grafana
              name: data
      volumes:
        - name: config
          configMap:
            name: grafana
        - name: data
          persistentVolumeClaim:
            claimName: grafana
