base/grafana/service.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  ports:
    - name: http-grafana
      port: 80
      protocol: TCP
      targetPort: http-grafana
  sessionAffinity: None
