base/grafana/virtualservice.k8s.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana
spec:
  hosts:
    - grafana.k.seankhliao.com
  gateways:
    - grafana
  http:
    - route:
        - destination:
            host: grafana.grafana.svc.cluster.local
            port:
              number: 80
